# ocaml-jemalloc

./: .bazelrc  .gitignore  BUILD.bzl  README.md  WORKSPACE.bazel  WORKSPACE.bzl
bzl/: opam.bzl
src/: BUILD.bazel
